--- a/master-thesis.tex
+++ b/master-thesis.tex
@@ -221,7 +221,8 @@ Informaatika õppekava\\%[2mm]
 
 \vspace{4mm}
 
-\huge \TODO PLACEHOLDER TITLE
+\huge Security of the openHAB Smart Home \\
+\large A contribution for the user authentication and authorization
 
 %\vspace*{\stretch{7}}
 \vspace{20mm}
@@ -269,8 +270,7 @@ Informaatika õppekava\\%[2mm]
 %=== Info in English
 \newcommand\EngInfo{{%
     \selectlanguage{english}
-\TODO{Set a title for thesis}    
-\noindent\textbf{\large PLACEHOLDER TITLE}
+\noindent\textbf{\large Security of the openHAB Smart Home \\ \normalsize A contribution for the user authentication and authorization}
 
 \vspace*{3ex}
 
@@ -348,9 +348,42 @@ study.}
 \newpage
 \section{Introduction}
 
+\TODO{(ref) references}
+
+SECOND ATTEMPT
+%% \TODO{What is it in simple terms (title)?}
+%% \TODO{Problem Statement}
+%% \TODO{Why should anyone care? (E.g. security)}
+%% \TODO{What was my contribution? (E.g. authentication/authorization)} 
+%% \TODO{What you are doing in each section (a sentence or two per section)}
+
+Tip: if it's hard for you to start writing, then try to split it to smaller parts, e.g. if the title is ``Type Inference for a Cryptographic Protocol Prover Tool'' then the ``What is it'' can be divided into ``what is type inference'', ``what is cryptographic protocol'' and ``what is the prover tool''. These three can also be split to smaller parts etc.
+
+---------------------------
+openHAB is an automation software that brings together and operates \emph{Things} for the purpose of building a smart home environment. Smart home, a subset of the Internet of Things paradigm, is gaining popularity not only as a futuristic toy, but as a real intelligent environment that can be put in use today. \emph{Things}, which will be detailed later, form the basic unit in a smart home environment. Things capture data from the environment and transmit it to another point. Security is defined in \cite{certiCrypt} as having ``protection against adversaries'', i.e., those would, intentionally or not, cause harm. In this context, security refers actually to \emph{information security}, defined in the same source as a layer of security that aims to protect the confidentiality, integrity, and availability of information resources that may be in storage, processing or transmision. Thus, this work introduces the notion of reviewing, evaluating, and possibly improving the existing (information) security present in the openHAB automation software for the smart home.
+
+The security of the openHAB software, in terms of data protection and privacy preservation, is currently undefined, as there are no direct sources that address these topics. It is desirable to have an overview on what kind of security mechanisms are present and enforced in openHAB, as well as which vulnerabilities might have an impact on its use and future adoption. Morevoer, as an open-source project, there is no clear indication that the security is being actively looked into for this project, or if it is feasible to do so.
+
+It is known that security breaches may have a significant economic impact on a firm, as described by \cite{certiCrypt}. Data loss or theft, tampering, and unauthorized operations are just some of the possible ocurrences led by the lack of proper security mechanisms in place. In the case of openHAB, a smart home application, it is not quite quantifiable how expensive it results to have a security breach occur at any level. The consequences may go from user discomfort to identity theft, or worse.
+
+Applications for the Internet of Things are still very recent, and still not much is not known about the possibilities it will bring. This has led to ongoing efforts, such as openHAB, to focus mostly on the system functionalities, rather than the user experience, security, or many other non-functional requirements. Ideally, there should be a framework that can be used to evaluate the security of IoT applications. At the time, this has not been established due to the vast differences in the architectures and implementations. Indeed, as the environment grows more complex, so does the attack surface areas and possible vulnerabilities.
+
+Not knowing the extent of how \emph{secure} openHAB or any other application of IoT is deters its adoption, and raises concerns about existing instances. Security by obscurity has never been the a reasonable attempt to protect information assets from adversaries. And indeed, as an open-source project, any party can freely view the code to try to find hidden vulnerabilities. For this reason, some effort could be spared for reviewing the security of existing models for Internet of Things, including concrete applications, such as openHAB.
+
+The contribution of this work are mainly two: an overview of the state of the art sesecurity in Internet of Things, and the implementation of a token-based authentication mechanism for openHAB. As part of the second part of the contribution, a fine-grained access control scheme is proposed for authorization of resources of the smart home environment. 
+
+This work is divided in ... sections. Section 2....
+
+
+---------------------------
+
 The Internet of Things, commonly referred as IoT, is a dynamic and heterogenous environment where \emph{sensing} devices may interact with each other for some particular purpose. The devices range from radio identification devices (RFID), infrared sensors, global positioning systems; to smart watches, smartphones, smart televisions, etc. The most important aspect for these devices is that they can gather some kind of data from the real world, and that are capable of transmitting it to another point. Usually, the devices may interact without human interventation, also known as Machine-to-Machine communication. Due to the wide diversity of capabilities among sensing devices, interoperability is a common challenge, especially due to vendor lock-in and obscure interfaces. Still, it is desirable that the devices can transparently communicate among themselves in a local scope, e.g. inside a wireless sensor network (WSN), and in some cases, even to an exteral scope, e.g. through the Internet. Typically, these devices do not directly communicate with each other, but do so through a gateway, which serves as a communication medium. Additionally, the gateway is also responsible for making the necessary translations between protocols if the devices need to send or receive data through the Internet.
 
-The actual devices employed and the nature of the data gathered depend on the specific application for the IoT. These applications may be categorized into smart home, smart grid, smart city, smart transportation, and so on. Regardless of the application, data has to be gathered from the real world and transmitted to another point. Considering the diversity of devices and applications, it is no trivial task to unify or to support interoperability between devices, especially if they make use of different protocols for communication. Indeed, interoperability, device naming in a network, finding other devices, are just some examples of the difficulties that may be found when instantiating an IoT application. Given this amount of issues present in the architecture and development of IoT applications, it is no surprise that much of the focus given both in research and industry has been towards the functional requirements. Non-functional requirements such as performance, user experience, security, among others, have been left as an afterthought.
+The actual devices employed and the nature of the data gathered depend on the specific application for the IoT. These applications may be categorized into smart home, smart grid, smart city, smart transportation, and so on. Regardless of the application, data has to be gathered from the real world and transmitted to another point. Considering the diversity of devices and applications, it is no trivial task to unify or to support interoperability between devices, especially if they make use of different protocols for communication. Indeed, interoperability, device naming in a network, finding other devices, are just some examples of the difficulties that may be found when instantiating an IoT application. To address these issues, a variety of architectures and solutions have been proposed in (ref). 
+
+Given this amount of issues present in the architecture and development of IoT applications, it is no surprise that much of the focus given both in research and industry has been towards the functional requirements. Non-functional requirements such as performance, user experience, security, among others, have been left as an afterthought.
+
+
 
 \TODO{look for reference on law about privacy}
 Due to recent developments on laws pertaining data security and privacy, more emphasis has given to the security of information systems. Thus, incorporating security into a software product is no longer a courtesy, but a duty toward the users. Data encryption, authentication, authorization mechanisms, non-repudiation, are just some of the possible measures that should be taken into account when designing a secure system, and the IoT is no exception to this. In this context, the privacy and confidentiality of the data gathered by the sensing devices come to mind. Depending on the nature of this data, the privacy might be essential to maintain, especially during transit to other devices or points in the network.
@@ -366,16 +399,6 @@ Ironically, openHAB2 has been often been labeled as \emph{Intranet of Things}, p
 
 
 \TODO{IoT Applications: smarthome, etc}
-
-\TODO{What is it in simple terms (title)?}
-\TODO{Problem Statement}
-\TODO{Why should anyone care? (E.g. security)}
-\TODO{What was my contribution? (E.g. authentication/authorization)} 
-\TODO{What you are doing in each section (a sentence or two per section)}
-
-Tip: if it's hard for you to start writing, then try to split it to smaller parts, e.g. if the title is ``Type Inference for a Cryptographic Protocol Prover Tool'' then the ``What is it'' can be divided into ``what is type inference'', ``what is cryptographic protocol'' and ``what is the prover tool''. These three can also be split to smaller parts etc.
-
-
 
 
 \newpage
@@ -683,7 +706,7 @@ Tip: We can use minipage to create a frame around some important information.
   (checked 15.05.2012)
 \bibitem{GameB_1} GameB1
 \bibitem{GameB_2} GameB2
-\bibitem{certicrypt} certicrypt
+\bibitem{certiCrypt} certiCrypt
 \bibitem{kamm12} kamm12
 \end{thebibliography}
 \end{comment}
@@ -727,8 +750,7 @@ make available to the public via the web environment of the University of Tartu,
 \end{enumerate}
 
 of my thesis
-\TODO{Set a title for thesis}    
-\textbf{PLACEHOLDER TITLE}
+\textbf{Security of the openHAB Smart Home}
 
 supervised by Satish Narayana Srirama and Danilo Gligoroski
 
